force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/Seat_Allocation_and_Ticketing__c.object-meta.xml
<CustomObject>
    <label>Seat Allocation and Ticketing</label>
    <nameField>
        <displayFormat>SAT{YYYY}{MM}{00000000}</displayFormat>
        <label>Seat Allocation and Ticketing No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seat Allocations and Ticketings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>