force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Group_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>