force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Add_Name_List_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Add_Name_List_Error_Message__c</fullName>
    <label>Add Name List Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>