force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Adjust_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Type__c</fullName>
    <label>Adjust Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Allocation_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Involuntary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>