force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Type__c</fullName>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SRS</fullName>
            </value>
            <value>
                <fullName>ADC</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>