force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Booking_Reference_PNR__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference_PNR__c</fullName>
    <description>Temp PNR by B2B</description>
    <label>Booking Reference</label>
    <length>10</length>
    <type>Text</type>
</CustomField>