force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Seat Allocations and Ticketings</relationshipLabel>
    <relationshipName>Group_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>