force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Seat Allocations and Ticketings</relationshipLabel>
    <relationshipName>Seat_Allocations_and_Ticketings</relationshipName>
    <type>Lookup</type>
</CustomField>