force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <formula>Case_ID__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID</label>
    <type>Text</type>
</CustomField>