force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Case_ID__r.Contact.LastName &amp;&quot; &quot;&amp;Case_ID__r.Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>