force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Departing_Flight_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Arrival_Date__c</fullName>
    <formula>Case_ID__r.Departing_Flight_Arrival_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departing Flight Arrival Date</label>
    <type>Date</type>
</CustomField>