force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Departing_PNR_Status__c.field-meta.xml
<CustomField>
    <fullName>Departing_PNR_Status__c</fullName>
    <label>Departing PNR Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>