force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Fare__c.field-meta.xml
<CustomField>
    <fullName>Fare__c</fullName>
    <label>Fare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>