force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Final_Allocated_Seats_Amadeus__c.field-meta.xml
<CustomField>
    <fullName>Final_Allocated_Seats_Amadeus__c</fullName>
    <label>Final Allocated Seats (Amadeus)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>