force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Final_BSC_Infant__c.field-meta.xml
<CustomField>
    <fullName>Final_BSC_Infant__c</fullName>
    <label>Final BSC (Infant)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>