force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Final_Sales_Seats__c.field-meta.xml
<CustomField>
    <fullName>Final_Sales_Seats__c</fullName>
    <label>Final Sales Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>