force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Final_Unit_Price_Adult__c.field-meta.xml
<CustomField>
    <fullName>Final_Unit_Price_Adult__c</fullName>
    <label>Final Unit Price(Adult)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>