force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Flow_Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Tax_Date__c</fullName>
    <description>Used to hold the date value of the date selected in the Update Tax Amount flow action.</description>
    <label>Flow Tax Date</label>
    <type>Date</type>
</CustomField>