force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Get_Itinerary_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Get_Itinerary_Error_Message__c</fullName>
    <label>Get Itinerary Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>