force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Group_Booking_Route__c.field-meta.xml
<CustomField>
    <fullName>Group_Booking_Route__c</fullName>
    <formula>Text(Case_ID__r.Route__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Booking Route</label>
    <type>Text</type>
</CustomField>