force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Indicative_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Indicative_Unit_Price__c</fullName>
    <label>Indicative Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>