force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Initial_BSC_Infant__c.field-meta.xml
<CustomField>
    <fullName>Initial_BSC_Infant__c</fullName>
    <label>Initial BSC(Infant)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>