force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Initial_Unit_Price_Child__c.field-meta.xml
<CustomField>
    <fullName>Initial_Unit_Price_Child__c</fullName>
    <label>Initial Unit Price(Child)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>