force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Is_All_Itinerary_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Itinerary_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If SAT PNR Status is KK/HK/RR then it would be a confirmed PNR.</description>
    <label>Is All Itinerary Confirmed</label>
    <type>Checkbox</type>
</CustomField>