force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Is_All_Itinerary_Confirmed_formula__c.field-meta.xml
<CustomField>
    <fullName>Is_All_Itinerary_Confirmed_formula__c</fullName>
    <description>If SAT PNR Status is KK/HK/RR then it would be a confirmed PNR.</description>
    <formula>IF(
 CONTAINS(text(Case_ID__r.Route__c) , &quot;one-way&quot;) ,
 Departing_PNR_Status__c=&quot;KK&quot;||
 Departing_PNR_Status__c=&quot;HK&quot;||
 Departing_PNR_Status__c=&quot;RR&quot;||
 Returning_PNR_Status__c=&quot;KK&quot;||
 Returning_PNR_Status__c=&quot;HK&quot;||
 Returning_PNR_Status__c=&quot;RR&quot;
, 
 (
 Departing_PNR_Status__c=&quot;KK&quot;||
 Departing_PNR_Status__c=&quot;HK&quot;||
 Departing_PNR_Status__c=&quot;RR&quot;
 )&amp;&amp;
 (
 Returning_PNR_Status__c=&quot;KK&quot;||
 Returning_PNR_Status__c=&quot;HK&quot;||
 Returning_PNR_Status__c=&quot;RR&quot;
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is All Itinerary Confirmed(formula)</label>
    <type>Checkbox</type>
</CustomField>