force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Is_Name_List_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Name_List_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Name List Created?</label>
    <type>Checkbox</type>
</CustomField>