force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/IsFlightInfoFilled__c.field-meta.xml
<CustomField>
    <fullName>IsFlightInfoFilled__c</fullName>
    <formula>If(Or(Isblank( Departing_Flight_Date__c ),Isblank( Departing_Flight_Number__c ),isblank( Returning_Flight_Date__c ),isblank( Returning_Flight_Number__c )), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsFlightInfoFilled?</label>
    <type>Checkbox</type>
</CustomField>