force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Issue_Ticket_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Issue_Ticket_Error_Message__c</fullName>
    <label>Issue Ticket Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>