force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Issue_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>Issue_Ticket_Status__c</fullName>
    <label>Issue Ticket Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1A_Intergration_Status</valueSetName>
    </valueSet>
</CustomField>