force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Issue_Ticket_Time__c.field-meta.xml
<CustomField>
    <fullName>Issue_Ticket_Time__c</fullName>
    <label>Issue Ticket Time</label>
    <type>DateTime</type>
</CustomField>