force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Itinerary__c.field-meta.xml
<CustomField>
    <fullName>Itinerary__c</fullName>
    <label>Itinerary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>