force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Itinerary_Success_Time__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_Success_Time__c</fullName>
    <description>Get Itinerary Success Time, excluding Failed Time</description>
    <inlineHelpText>此欄位僅記錄【成功取得行程單】的時間，失敗則不紀錄</inlineHelpText>
    <label>Itinerary Success Time</label>
    <type>DateTime</type>
</CustomField>