force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Last_Get_Itinerary_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Get_Itinerary_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Get Itinerary By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Seat_Allocations_and_Ticketings3</relationshipName>
    <type>Lookup</type>
</CustomField>