force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Need_Approval__c.field-meta.xml
<CustomField>
    <fullName>Need_Approval__c</fullName>
    <formula>If ( And(Or( Final_Unit_Price_Adult__c &lt;&gt; Initial_Unit_Price_Adult__c ,  Final_Unit_Price_Child__c &lt;&gt;   Initial_Unit_Price_Child__c ,  Final_Unit_Price_Infant__c &lt;&gt;  Initial_Unit_Price_Infant__c  ),  

Final_Allocated_Seats__c &gt;0 ), 



True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Approval ？</label>
    <type>Checkbox</type>
</CustomField>