force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/No_of_Infant__c.field-meta.xml
<CustomField>
    <fullName>No_of_Infant__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Infant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>