force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Not_in_Fare_Table__c.field-meta.xml
<CustomField>
    <fullName>Not_in_Fare_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not in Fare Table</label>
    <type>Checkbox</type>
</CustomField>