force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Number_of_PNRs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PNRs__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of PNRs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>