force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Original_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Seat_Allocations_and_Ticketings</relationshipName>
    <type>Lookup</type>
</CustomField>