force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Original_Sat__c.field-meta.xml
<CustomField>
    <fullName>Original_Sat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Sat</label>
    <referenceTo>Seat_Allocation_and_Ticketing__c</referenceTo>
    <relationshipLabel>Seat Allocations and Ticketings</relationshipLabel>
    <relationshipName>Seat_Allocations_and_Ticketings</relationshipName>
    <type>Lookup</type>
</CustomField>