force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Other_PNRs__c.field-meta.xml
<CustomField>
    <fullName>Other_PNRs__c</fullName>
    <label>Other PNRs</label>
    <type>TextArea</type>
</CustomField>