force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/RBD__c.field-meta.xml
<CustomField>
    <fullName>RBD__c</fullName>
    <label>RBD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G</fullName>
                <default>true</default>
                <label>G</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>