force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <label>Reasons</label>
    <type>TextArea</type>
</CustomField>