force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Requested_Seats__c.field-meta.xml
<CustomField>
    <fullName>Requested_Seats__c</fullName>
    <label>Requested Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>