force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Returning_Flight_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Returning_Flight_Arrival_Date__c</fullName>
    <formula>Case_ID__r.Returning_Flight_Arrival_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returning Flight Arrival Date</label>
    <type>Date</type>
</CustomField>