force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Returning_PNR_Status__c.field-meta.xml
<CustomField>
    <fullName>Returning_PNR_Status__c</fullName>
    <label>Returning PNR Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>