force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Split_PNR_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Split_PNR_Error_Message__c</fullName>
    <label>Split PNR Error Message</label>
    <type>TextArea</type>
</CustomField>