force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Split_PNR_Status__c.field-meta.xml
<CustomField>
    <fullName>Split_PNR_Status__c</fullName>
    <label>Split PNR Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Succeeded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>