force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Starlux_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Starlux_Agent_Phone__c</fullName>
    <formula>Case_ID__r.Starlux_Agent_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starlux Agent Phone</label>
    <type>Text</type>
</CustomField>