force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Status_del__c.field-meta.xml
<CustomField>
    <fullName>Status_del__c</fullName>
    <label>Status_del</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ticket Sales in Progress</fullName>
            </value>
            <value>
                <fullName>Request for Ticketing</fullName>
            </value>
            <value>
                <fullName>Ready for XO</fullName>
            </value>
            <value>
                <fullName>Waiting for Payment</fullName>
            </value>
            <value>
                <fullName>Processing Payment</fullName>
            </value>
            <value>
                <fullName>Payment Details Incorrect</fullName>
            </value>
            <value>
                <fullName>Ready for Ticketing</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>