force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Sync_SAT_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sync_SAT_Error_Message__c</fullName>
    <label>Sync SAT Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>