force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Sync_SAT_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Sync_SAT_Status_Image__c</fullName>
    <formula>IF
(
    TEXT(Sync_SAT_Status__c) = &quot;Succeeded&quot;,
    IMAGE(&quot;https://starlux--starluxtrn--c.sandbox.vf.force.com/resource/1684329087000/Succeeded?&quot;, &quot;Succeeded&quot; ,20, 20),
IF(
    TEXT(Sync_SAT_Status__c) = &quot;Requesting&quot;,
    IMAGE(&quot;https://starlux--starluxtrn--c.sandbox.vf.force.com/resource/1695194121000/Loading2?&quot;, &quot;Loading2&quot; ,25, 25),
    IMAGE(&quot;https://starlux--starluxtrn--c.sandbox.vf.force.com/resource/1684329136000/warn?&quot;, &quot;Failed&quot; ,20, 20)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync SAT Status Icon</label>
    <type>Text</type>
</CustomField>