force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>Tax_Date__c</fullName>
    <label>Tax Date</label>
    <type>Date</type>
</CustomField>