force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Ticket_Currency__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Currency__c</fullName>
    <defaultValue>&quot;TWD&quot;</defaultValue>
    <label>Ticket Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>