force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Ticket_Fare_Rule_No__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Fare_Rule_No__c</fullName>
    <description>Refresh by apex(UpdateTicketFare/SeatAllocationTriggerHandler)</description>
    <label>Ticket Fare Rule No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>