force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Ticketing_PNR__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_PNR__c</fullName>
    <description>Real PNR  by B2B</description>
    <label>Ticketing PNR</label>
    <length>6</length>
    <type>Text</type>
</CustomField>