force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Tier_1_Approver__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 1 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Seat_Allocations_and_Ticketings1</relationshipName>
    <type>Lookup</type>
</CustomField>