force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Tier_2_Approver__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 2 Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Seat_Allocations_and_Ticketings2</relationshipName>
    <type>Lookup</type>
</CustomField>