force-app/main/default/objects/Seat_Allocation_and_Ticketing__c/fields/Total_BSC_Amount_Final__c.field-meta.xml
<CustomField>
    <fullName>Total_BSC_Amount_Final__c</fullName>
    <formula>(No_of_Adult__c * Final_BSC_Adult__c) +
(No_of_Child__c * Final_BSC_Child__c) +
(No_of_Infant__c * Final_BSC_Infant__c)</formula>
    <label>Total BSC Amount(Final)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>